Update network
* refactor code around creating networks
* implement update networks
* ignore empty attributes from OpenNebula address ranges
* unit-tests and documentation
